package SMA;

import com.intellij.uiDesigner.core.GridConstraints;
import com.intellij.uiDesigner.core.GridLayoutManager;
import jade.gui.GuiAgent;

import javax.swing.*;
import javax.swing.filechooser.FileNameExtensionFilter;
import java.awt.*;

public class JfrmAgenteArchivo extends JFrame {

    private GuiAgent agent;

    private JButton seleccionarArchivoButton;
    private JButton iniciarProcesoButton;
    private JLabel path;

    public JfrmAgenteArchivo(GuiAgent agent) {
        this.agent = agent;
        // GUI initializer generated by IntelliJ IDEA GUI Designer
        // >>> IMPORTANT!! <<<
        // DO NOT EDIT OR ADD ANY CODE HERE!
        $$$setupUI$$$();
        seleccionarArchivoButton.addActionListener(actionEvent -> {
            String ruta;
            final JFileChooser chooser = new JFileChooser();
            FileNameExtensionFilter filter = new FileNameExtensionFilter("Archivos arff-csv", "arff", "csv");
            chooser.setFileFilter(filter);
            chooser.showOpenDialog(getContentPane());
            ruta = chooser.getSelectedFile().toString();
            path.setText(ruta);
            System.out.println(ruta);
        });
    }

    /**
     * Method generated by IntelliJ IDEA GUI Designer
     * >>> IMPORTANT!! <<<
     * DO NOT edit this method OR call it in your code!
     *
     * @noinspection ALL
     */
    private void $$$setupUI$$$() {
        final JPanel panel1 = new JPanel();
        panel1.setLayout(new GridLayoutManager(2, 3, new Insets(0, 0, 0, 0), 0, 0));
        final JLabel label1 = new JLabel();
        label1.setText("Ruta:");
        panel1.add(label1, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_WEST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_FIXED, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
        final JPanel panel2 = new JPanel();
        panel2.setLayout(new FlowLayout(FlowLayout.CENTER, 5, 5));
        panel1.add(panel2, new GridConstraints(1, 0, 1, 2, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, null, null, null, 0, false));
        seleccionarArchivoButton = new JButton();
        seleccionarArchivoButton.setText("Seleccionar archivo");
        panel2.add(seleccionarArchivoButton);
        iniciarProcesoButton = new JButton();
        iniciarProcesoButton.setText("Iniciar proceso");
        panel2.add(iniciarProcesoButton);
        path = new JLabel();
        path.setText("");
        panel1.add(path, new GridConstraints(0, 1, 1, 1, GridConstraints.ANCHOR_WEST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_FIXED, GridConstraints.SIZEPOLICY_FIXED, null, new Dimension(48, 18), null, 0, false));
    }
}
