@startuml

title __JADEPROJECT's Class Diagram__\n

  namespace Ejercicios.Ejemplos {
    class Ejercicios.Ejemplos.AgentTry {
    }
  }
  

  namespace Ejercicios.Ejemplos {
    class Ejercicios.Ejemplos.ContadorExternoBehaviour {
    }
  }
  

  namespace Ejercicios.Ejemplos {
    class Ejercicios.Ejemplos.ContadorExternoCyclicBehaviour {
    }
  }
  

  namespace agentes {
    class agentes.AgenteArchivo {
    }
  }
  

  namespace agentes {
    class agentes.AgenteDM {
    }
  }
  

  namespace agentes {
    class agentes.AgenteResultado {
    }
  }
  

  namespace agentes {
    class agentes.JfrmAgenteArchivo {
    }
  }
  

  namespace agentes {
    class agentes.JfrmAgenteResultado {
    }
  }
  

  Ejercicios.Ejemplos.AgentTry -up-|> jade.core.Agent
  Ejercicios.Ejemplos.ContadorExternoBehaviour -up-|> jade.core.behaviours.Behaviour
  Ejercicios.Ejemplos.ContadorExternoCyclicBehaviour -up-|> jade.core.behaviours.CyclicBehaviour
  agentes.AgenteArchivo -up-|> jade.gui.GuiAgent
  agentes.AgenteArchivo o-- agentes.JfrmAgenteArchivo : vfile
  agentes.AgenteDM -up-|> jade.core.Agent
  agentes.AgenteResultado -up-|> jade.gui.GuiAgent
  agentes.AgenteResultado o-- agentes.AgenteResultado : ag
  agentes.AgenteResultado o-- agentes.JfrmAgenteResultado : vres
  agentes.JfrmAgenteArchivo -up-|> javax.swing.JFrame
  agentes.JfrmAgenteResultado -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
